Modularization of report ready.

--- a/documents/report/report.tex
+++ b/documents/report/report.tex
@@ -106,23 +106,35 @@ bmargin={2.5cm}]{geometry}
 \label{chap:hardware}
 \section{Logic Board}
 \label{sec:logic}
+\input{./doc/logic.tex}
 \section{Power Board}
 \label{sec:power}
+\input{./doc/power.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Software
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Software}
 \label{chap:software}
+\section{Code Structure}
+\label{sec:code_structure}
+\input{./doc/code_structure.tex}
+\section{Operating System}
+\label{sec:os}
+\input{./doc/os.tex}
+\section{Realization}
+\label{sec:realization}
+\input{./doc/realization.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Satus Quo and Outlook
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Status Quo and Outlook}
 \label{chap:status}
-\section{What works? What doesn't?}
+\section{What works? What does not work?}
 \label{sec:what}
+\input{./doc/works.tex}
 \section{Outlook}
 \label{sec:outlook}
-
+\input{./doc/outlook.tex}
 \end{document}
