Came quite far with the report.

--- a/documents/report/mydefs.tex
+++ b/documents/report/mydefs.tex
@@ -10,7 +10,7 @@
 \newcommand{\mytitle}{Swakeup}
 \newcommand{\mytypeofwork}{Project Report}
 \newcommand{\mycourse}{Microcontroller Programming} 
-\newcommand{\myuniversity}{Uppsala Universitet}
+\newcommand{\myuniversity}{Uppsala University}
 \newcommand{\mydepartement}{Information Technology}
 \newcommand{\myauthora}{Elmar van Rijnswou (elmarvanrijnswou@hotmail.com)}
 \newcommand{\myauthorb}{Maximilian Stiefel (stiefel.maximilian@online.de)}
