--- a/documents/report/titlepage.tex
+++ b/documents/report/titlepage.tex
@@ -31,7 +31,7 @@
 		\textbf{\MakeUppercase{\mytypeofwork}}\\
 	\end{LARGE}	
 	\vspace*{2em}
-	within the lecture in\\
+	within the lecture of\\
 	\mycourse\\
 	\vspace*{2em}
 	at \myuniversity\\
