--- a/documents/report/doc/realization.tex
+++ b/documents/report/doc/realization.tex
@@ -1,4 +1,4 @@
-The function of this chapter is to get a deeper understanding of the modules and code that has been written. Due to time constraints and hardware failure, the following modules were not realized: "Lamp, Social, Wi-Fi, Controller, ADC". Thus these modules will not be discussed in this chapter. 
+The function of this chapter is to get a deeper understanding of the modules and code that has been written. Due to time constraints and hardware failure, the following modules were not realized: "Lamp, Social, Wi-Fi, Controller, ADC, EEPROM". Thus these modules will not be discussed in this chapter. 
 \subsection{platform}
 We start with the most tightly with the microcontroller integrated layer.
 \subsubsection{UART}
@@ -20,49 +20,8 @@ static uint8_t init(void) {
 }
 \end{minted}
 In this example, a certain module will tell the UART module to listen for a new line character, and the module will subscribe to the event. The UART module passes the delimiter information with it, so that there is knowledge about how much data can be read since the last delimiter event.\\ 
-The interrupts are generated with the following macros:
-\begin{minted}[baselinestretch=1, fontsize=\small, linenos,frame=single,framesep=5pt]{C}
-#define USARTRXCISR(NAME, PORT, USART_ID, REC_FC)            \
-ISR(NAME##_RXC_vect) {                             \
-	uint8_t read = PORT.DATA;                    \
-	if (writeInBuf(read, &PORT)) {               \
-		REC_FC(read);                                   \
-		uint8_t i = 0;                              \
-		for (; i < UART_MAX_DELIMITERS; i++) {      \
-			if (delimiters[USART_ID][i].delimiter != 0) {  \
-				delimiters[USART_ID][i].length++;          \
-				if (read == delimiters[USART_ID][i].delimiter) {   \
-					delimiters[USART_ID][i].port = &PORT;       \
-					event_fire(&EVENT_UART_DELIMITER,	\
-					 SYSTEM_ADDRESS_CAST (&delimiters[USART_ID][i])); \
-				}   \
-			}   \
-		}   \
-	} else {/*buffer full */    \
-		CP_PORT.CTRLA &= ~(USART_RXCINTLVL_LO_gc);  \
-	}   \
-}
-
-#define USARTDREISR(NAME, PORT, USART_ID)\
-ISR(NAME##_DRE_vect) {             \
-	uint8_t size = uartStatus[USART_ID].outBuffer_size;    \
-	if (size > 0) { \
-		if (softlock(USART_ID)) {\
-			uint8_t tail = uartStatus[USART_ID].outBuffer_tail;\
-			PORT.DATA = outBuffer[USART_ID][tail];  \
-			uartStatus[USART_ID].outBuffer_size--; \
-			tail++; \
-			if (tail >= UART_MAX_OUT_BUFFER) tail = 0;\
-			uartStatus[USART_ID].outBuffer_tail = tail;\
-			unlock(USART_ID);  \
-		}\
-	} else {\
-		sending[USART_ID] = 0;\
-		PORT.CTRLA &= ~(USART_DREINTLVL0_bm);\
-	}\
-}
-\end{minted}
-And to generate the following code can be used for every USART channel:
+The interrupts are generated with the macros that can be found at appendix \ref{append:usartinterruptgen}.
+The following following code can be used to generate the interrupt code for every USART channel:
 \begin{minted}[baselinestretch=1, fontsize=\small, linenos,frame=single,framesep=5pt]{C}
 USARTRXCISR(USARTE0, DEBUG_UART,     USARTE_ID, received);
 USARTDREISR(USARTE0, DEBUG_UART,     USARTE_ID);
@@ -85,3 +44,23 @@ The USART on both channels have the same settings. 8 bit words, medium level int
 The SPI driver is incomplete as is, a lot of performance optimizations can and should be done. One of the biggest pitfalls at the moment is that it is blocked writing. When a lot of data is being sent consecutively by the SPI driver, the event buffer fills up and might even get full. Interrupt based design should be looked at and investigated, as this would still allow the events to be handled. The caveat with this, however, is that a large buffer has to be allocated for the SPI. And memory is costly. DMA is another technique to be looked at, this would eliminate the need for a CPU at all and give the system all the time to process the other tasks. There needs to be some caution, as DMA has overhead on low data. This should be investigated.
 \subsubsection{Timer}
 The Timer design is incomplete, and only houses a RTC. Due to a hardware failure, the internal crystal is being used. Which offers a worse accuracy than an external one. However since the most recent time can be retrieved from the internet this is not a major issue. Future additions to the Timer module include: Alarm function for timeouts on waiting, PWM functionality and using the 32 RTC with the external crystal. The Timer module is set up to use it's overflow interrupt. If the internal counter overflows the period of 1023 a second pulse event will get fired and the run time will get incremented.
+\subsection{Driver}
+One step up gives the communication with external hardware.
+\subsubsection{SEPS525F}
+As mentioned before, the screen uses a SEPS525F ic. This driver drives allows for driving screens with a resolution of up to 160x128 pixels with 18 bit combined color. This means that there are 6 bits for blue, 6 bits for green and 6 bits for red. However this would require to send 3 bytes for 2 bits of color precision. There is also a 16 bits combined color option available, which has been used in this driver. 5 bits for blue, 6 bits for green and 5 bits for red. A 24 bit color (8 bits per color, 0-255) can be converted with the following define:
+\begin{minted}[baselinestretch=1, fontsize=\small, linenos,frame=single,framesep=5pt]{C}
+#define SEPS525F_TO656(r,g,b)((r>>3)<<11)|((g>>2)<<5)|(b>>3)
+\end{minted}
+The SEPS525F has three data interfaces that could be used: SPI, RGB, Parallel. In retrospect a parallel interface would've given major performance advantages. However due to time constraints a SPI interface has been chosen. The clock frequency of the SPI is set at the cpu speed divided by two. Which is a clock of 8 MHz when not in any power saving mode.\newpar
+The SEPS525F has two modes, a data mode and a command mode. With the command mode a register can be set. In order to achieve this the register will be written first, while clearing the RS and the CS pin. Once the register is written, the RS pin will be set while keeping the CS pin low. After the data is written the CS pin will be set.
+\begin{minted}[baselinestretch=1, fontsize=\small, linenos,frame=single,framesep=5pt]{C}
+static void SEPS525F_reg(int idx, int value) {
+	SEPS525F_PORT.OUTCLR = SEPS525F_CSB | SEPS525F_RS;
+	spi_write_blocked(idx);
+	SEPS525F_PORT.OUTSET = SEPS525F_RS;
+	SEPS525F_PORT.OUTCLR = SEPS525F_CSB;
+	spi_write_blocked(value);
+	SEPS525F_PORT.OUTSET = SEPS525F_CSB;
+}
+\end{minted}
+This can be seen in the code above. The driver gives the possibility to draw a single pixel, but it's significantly faster to write multiple pixels at once. For this a region that will be drawn on has to be set. Then the driver ic will expect a certain amount of pixels, which have to be written as data. According to the datasheet special scrolling features should be available, however this is not explained later on in the datasheet.
