adding logic schemetics

--- a/documents/report/report.tex
+++ b/documents/report/report.tex
@@ -164,6 +164,7 @@ In order to facilitate all the functionality, code had to be written. Because th
 \appendix
 % Introduce new geometry to be able to have more space for appendix
 \newgeometry{lmargin={2.5cm},rmargin={2.5cm},tmargin={0cm},bmargin={1,5cm}}
+\includepdf[pages={1},scale=0.8,pagecommand=\chapter{Schematics Logic Board}\label{append:logic}]{./fig/logic.pdf}
 \includepdf[pages={1},scale=0.8,pagecommand=\chapter{Schematics Power Board}\label{append:power}]{./fig/power.pdf}
 \includepdf[pages={2-},scale=0.8,pagecommand={}]{./fig/power.pdf}
 \chapter{USART interrupt generation}
