--- a/documents/report/mydefs.tex
+++ b/documents/report/mydefs.tex
@@ -12,8 +12,8 @@
 \newcommand{\mycourse}{Microcontroller Programming} 
 \newcommand{\myuniversity}{Uppsala University}
 \newcommand{\mydepartement}{Information Technology}
-\newcommand{\myauthora}{Elmar van Rijnswou (elmarvanrijnswou@hotmail.com)}
-\newcommand{\myauthorb}{Maximilian Stiefel (stiefel.maximilian@online.de)}
+\newcommand{\myauthora}{Elmar van Rijnswou (Elmar.Vanrijnswou.9818@student.uu.se)}
+\newcommand{\myauthorb}{Maximilian Stiefel (Maximilian.Stiefel.8233@student.uu.se)}
 \newcommand{\myauthorc}{}
 \newcommand{\myduedate}{2017-03-10 24:00}
 \newcommand{\mytutor}{Uwe Zimmermann (uwe.zimmermann@angstrom.uu.se)}
