--- a/documents/report/report.tex
+++ b/documents/report/report.tex
@@ -132,7 +132,6 @@ bmargin={2.5cm}]{geometry}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Introduction}
 \label{chap:intro}
-Elmar has a small dick compare \cite{microsemi:igloo2_site}.
 \section{Idea}
 \label{sec:idea}
 \input{./doc/idea.tex}
@@ -157,7 +156,7 @@ Elmar has a small dick compare \cite{microsemi:igloo2_site}.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Software}
 \label{chap:software}
-In order to facilitate all the functionality, code had to be written. Because the system is quite complex with many different functions, a good and clear structure has to be realized. Much of the development time has been invested in the writing and testing of underlying code which don't have a direct result for the finalized product. In the following sub-chapters this system will be described, and explained why certain choices and compromises have been made.
+In order to facilitate all the functionality, code had to be written. Because the system is quite complex with many different functions, a good and clear structure has to be realized. Much of the development time has been invested in the writing and testing of underlying code which doesn't have a direct result for the finalized product. In the following sub-chapters this system will be described, and explained why certain choices and compromises have been made.
 \section{Code Structure} 
 \label{sec:code_structure}
 \input{./doc/code_structure.tex}
