Strcutured report roughly.

--- a/documents/report/mydefs.tex
+++ b/documents/report/mydefs.tex
@@ -9,13 +9,13 @@
 
 \newcommand{\mytitle}{Swakeup}
 \newcommand{\mytypeofwork}{Project Report}
-\newcommand{\mycourse}{Microcontroller Programming} 
+\newcommand{\mycourse}{Programming Embedded Systems} 
 \newcommand{\myuniversity}{Uppsala University}
 \newcommand{\mydepartement}{Information Technology}
 \newcommand{\myauthora}{Elmar van Rijnswou (Elmar.Vanrijnswou.9818@student.uu.se)}
 \newcommand{\myauthorb}{Maximilian Stiefel (Maximilian.Stiefel.8233@student.uu.se)}
 \newcommand{\myauthorc}{}
-\newcommand{\myduedate}{2017-03-10 24:00}
-\newcommand{\mytutor}{Uwe Zimmermann (uwe.zimmermann@angstrom.uu.se)}
+\newcommand{\myduedate}{2017-05-31 24:00}
+\newcommand{\mytutor}{Philipp Rümmer (philipp.ruemmer@it.uu.se)}
 \newcommand{\mykeywords}{}
-\newcommand{\myperiod}{December 2016 - March 2017}
+\newcommand{\myperiod}{January 2017 - May 2017}
