--- a/documents/report/titlepage.tex
+++ b/documents/report/titlepage.tex
@@ -23,6 +23,7 @@
 
 \begin{center}
 	\vspace*{0pt}
+	\noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
 	\begin{Huge}
 		\textbf{\mytitle}\\
 	\end{Huge}
@@ -30,6 +31,7 @@
 	\begin{LARGE}
 		\textbf{\MakeUppercase{\mytypeofwork}}\\
 	\end{LARGE}	
+	\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
 	\vspace*{2em}
 	within the lecture of\\
 	\mycourse\\
