--- a/documents/report/doc/implementation.tex
+++ b/documents/report/doc/implementation.tex
@@ -1,1 +1,8 @@
 \chapter{Implementation}
+\label{chap:implementation}
+
+\section{Hardware}
+\label{sec:hardware}
+
+\section{Software}
+\label{sec:software}
