--- a/documents/report/titlepage.tex
+++ b/documents/report/titlepage.tex
@@ -23,7 +23,7 @@
 
 \begin{center}
 	\vspace*{0pt}
-	\noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
+	\noindent\makebox[\linewidth]{\rule{\textwidth}{0.5mm}}
 	\begin{Huge}
 		\textbf{\mytitle}\\
 	\end{Huge}
@@ -31,15 +31,15 @@
 	\begin{LARGE}
 		\textbf{\MakeUppercase{\mytypeofwork}}\\
 	\end{LARGE}	
-	\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
-	\vspace*{2em}
+	\noindent\makebox[\linewidth]{\rule{\textwidth}{0.5mm}}\\
+	\vspace*{5em}
 	within the lecture of\\
 	\mycourse\\
 	\vspace*{2em}
 	at \myuniversity\\
 	in the Departement of \mydepartement\\
 	\vspace*{2em}
-	\myauthora{} and \myauthorb{}
+	\myauthora{} \\and \myauthorb{}\\
 	\vspace*{2em}
 	Deadline: \myduedate\\
 	\vspace*{3em}
