--- a/documents/report/literature.bib
+++ b/documents/report/literature.bib
@@ -22,3 +22,15 @@
 	url			  = {http://www.sparetimelabs.com/tinyprintf/tinyprintf.php},
 	urldate		  = {2017-02-23}
 }
+@online{other:visitsweden,
+	author		= {{\myemph{Visit Sweden}}},
+	title         	= {{{Time and daylight in Sweden}}},
+	year          	=  2017,
+	url		= {https://visitsweden.com/time-and-daylight-hours/}
+}
+@online{other:sverigesradio,
+	author		= {{\myemph{Sveriges Radio}}},
+	title         	= {{{Are Swedes more suicidal than most?}}},
+	year          	=  2014,
+	url		= {http://sverigesradio.se/sida/artikel.aspx?artikel=5924063}
+}
