--- a/documents/report/report.tex
+++ b/documents/report/report.tex
@@ -98,9 +98,13 @@ bmargin={2.5cm}]{geometry}
 \rfoot{}
 \setlength{\headheight}{1cm}
 
+% For quotes
 \usepackage[autostyle]{csquotes}
 \usepackage[style=ieee,backend=bibtex]{biblatex}
 \addbibresource{literature.bib}
+
+%For tables
+\usepackage{tabularx}
 
 \begin{document}
 
